--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.1.4",
     "graphql": "^15.3.0",
     "jquery": "^3.5.1",
+    "moment-timezone": "^0.5.33",
     "react": "^16.13.1",
     "react-alert": "^7.0.1",
     "react-alert-template-basic": "^1.0.0",
